# Examples_JUCE

./: AUDIOPROCESS_KB.md  CMakeLists.txt  GainPlugin_Audio_Setup_Guide.md  HelloWorldLabel_Test_Report.md  KNOWLEDGE_BASE.md  README.md  Simple_Gain_Plugin_测试报告.md  VST_Plugin_Build_Report.md  WSL2_耳機麥克風測試指南.md  run_gain_plugin.sh  run_helloworldlabel.sh  touch
.claude/agents/: code-analyzer.md  code-reviewer.md  doc-validator.md
.claude/commands/: fkb.md
juce_audio_plugins/: CMakeLists.txt
juce_audio_plugins/GainPlugin/: CMakeLists.txt  README.md
juce_audio_plugins/GainPlugin/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
juce_gui_basics/HelloWorlds/HelloWorldLabel/src/: HelloWorldLabel.cpp
project-kb/00-quick-start/: overview.md
project-kb/01-architecture/: system-overview.md
project-kb/03-software-modules/: README.md  application-lifecycle-module.md  audio-driver.md  helloworld-juce-module.md  slider-module.md  textbutton-module.md  timer-module.md
project-kb/05-troubleshooting/: common-issues.md
tools/: run-kb.sh  setup_wsl2_audio.sh  test_audio_setup.sh
